# 3d-pcc-simulation

./: .gitignore  CMakeLists.txt  README.md  default_materials.json  installation.ipynb  junk.py  pcc-simulation.spec  test.ipynb
data/raw/: pino_data_20251213_231253.h5  pino_data_20251213_231253_20251213_231641.json  pino_data_20251213_231253_20251213_232052.json
gui/: main.py  widgets.py  widgets_new.py
gui/pino/: __init__.py
gui/pino/inference/: __init__.py
gui/pino/models/: unipino.py
gui/pino/training/: train_pino.py
pino/inference/: ik_solver.py
pino/models/: __init__.py  unipino.py
pino/training/: __init__.py  data_collector.py  train_pino.py
pino_output/logs/20251213_232729/: events.out.tfevents.1765668449.pascal.66531.0
pino_output/logs/20251213_233132/: events.out.tfevents.1765668692.pascal.67854.0
pino_output/logs/20251213_233148/: events.out.tfevents.1765668708.pascal.68010.0
src/: __init__.py
src/cuda/: fk.cu  forward_kinematics.cu
src/python/: checks.py  fk.py  ik.py  materials_library.py  spline.py
tests/: __init__.py  analysis.py  test_etan.py  test_strain.py
